--- a/.github/workflows/ci-pr.yaml
+++ b/.github/workflows/ci-pr.yaml
@@ -14,46 +14,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  changes:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read        # for checkout
-      pull-requests: read   # for paths-filter on PRs
-    outputs:
-      services: ${{ steps.filter.outputs.changes }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Check for changes
-        uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            adservice: src/adservice/**
-            cartservice: src/cartservice/**
-            checkoutservice: src/checkoutservice/**
-            currencyservice: src/currencyservice/**
-            emailservice: src/emailservice/**
-            frontend: src/frontend/**
-            loadgenerator: src/loadgenerator/**
-            paymentservice: src/paymentservice/**
-            productcatalogservice: src/productcatalogservice/**
-            recommendationservice: src/recommendationservice/**
-            shippingservice: src/shippingservice/**
-            shoppingassistantservice: src/shoppingassistantservice/**
-
   build:
-    needs: changes
-    # Only run if there arent't changes, i want to let it run for now, debugging purpose
-    if: ${{ needs.changes.outputs.services == '[]' && needs.changes.outputs.services == '' }}
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       security-events: write
     strategy:
       matrix:
-        service: ${{ fromJSON(needs.changes.outputs.services) }}
+        service:
+          - adservice
+          - cartservice
+          - checkoutservice
+          - currencyservice
+          - emailservice
+          - frontend
+          - loadgenerator
+          - paymentservice
+          - productcatalogservice
+          - recommendationservice
+          - shippingservice
+          - shoppingassistantservice
       fail-fast: false
     
     uses: ./.github/workflows/reusable-build.yaml
