modify: fix pipeline syntax:v2

--- a/.github/workflows/ci-pr.yaml
+++ b/.github/workflows/ci-pr.yaml
@@ -15,7 +15,10 @@ on:
 
 jobs:
   build:
-
+    permissions:
+      contents: read
+      packages: write
+      security-events: write
     strategy:
       matrix:
         service:
