--- a/.github/workflows/reusable-build.yaml
+++ b/.github/workflows/reusable-build.yaml
@@ -37,11 +37,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Lowercase Repository Name
+        id: repo_name
+        run: |
+          echo "REPO_LOWER=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+
       - name: Extract metadata (tags, labels)
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}/${{ inputs.service }}
+          images: ghcr.io/${{ env.REPO_LOWER }}/${{ inputs.service }}
           tags: |
             type=sha,format=long
             type=ref,event=branch
@@ -60,7 +65,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/${{ github.repository }}/${{ inputs.service }}:latest
+          image-ref: ghcr.io/${{ env.REPO_LOWER }}/${{ inputs.service }}:latest
           format: 'table'
           exit-code: '0' # Don't fail build yet, just report
           ignore-unfixed: true
