--- a/.github/workflows/ci-pr.yaml
+++ b/.github/workflows/ci-pr.yaml
@@ -40,6 +40,7 @@ jobs:
     with:
       service: ${{ matrix.service }}
       context_dir: ./src/${{ matrix.service }}
+      dockerfile: ${{ matrix.service == 'cartservice' && 'src/Dockerfile' || 'Dockerfile' }}
     secrets: inherit
 
   # ===========================================================================
