--- a/.github/workflows/ci-pr.yaml
+++ b/.github/workflows/ci-pr.yaml
@@ -55,4 +55,5 @@ jobs:
     ##disable this for now, for debugging purpose
     #if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     uses: ./.github/workflows/reusable-deploy.yaml
-    secrets: inherit
+    secrets:
+      INFRA_REPO_PAT: ${{ secrets.INFRA_REPO_PAT }}
